Update(1) index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section class="project section" id="Project">
         <h2 class="section-title">Project</h2>
         <p class="project-text">Check out some projects i'm created by this button</p>
-        <a href="https://drive.google.com/drive/folders/1Y_PMVKG_1b1ZipYp97tcd4dFYwI4kNbm?usp=drive_link" class="button__project">My Project</a>
+        <a href="https://farisraf.github.io/MyProject/">My Project</a>
       </section>
       <!-- End Project -->
     </main>
